# spell5erver

./: .prettierignore  Cargo.toml
src/: build.rs  db.rs  index.rs  main.rs
src/spell/: Cargo.toml  filters.rs  mod.rs
src/spell/parts/: class.rs  component.rs  level.rs  mod.rs  range.rs  school.rs  time_unit.rs
src/spell/src/: lib.rs
src/spell/src/parts/: component.rs  level.rs
static/: spells.ron  spells_bkp.ron
static/css/: index.scss  spell_card.css  spell_card.css.map  spell_card.scss
static/html/: index.html
static/js/: filter_form.js
static/ts/: filter_form.ts  tsconfig.json
templates/: index.rs.html  search_results.rs.html  spell_card.rs.html
