[package]
name = "spell5erver"
version = "0.1.0"
authors = ["timob"]
edition = "2018"

build = "src/build.rs"

[build-dependencies]
ructe = { version = "0.9.2", features = ["warp02", "sass"] }

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2.0"
mime = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
im = "14.3.0"
ron = "0.5.1"
